--- a/First_analysis.Rmd
+++ b/First_analysis.Rmd
@@ -30,6 +30,7 @@ FindSong <- function(SongName, Artist){
 }
 ```
 
+
 # SOng2
 ## Preliminary (exploratory) analysis.
 ```{r, warning = FALSE, message = FALSE}
@@ -96,6 +97,7 @@ test <- subset(song2, start= length(song2))
 test
 ```
 
+# Method 1 : Holt's linear trend method
 
 ## Starting with Holt's linear trend method, as we anticpate a clear trend in the data this method is a good point to start with, setting to start the initial solution by taking the average values of the first few observations. Holt's Method makes predictions for data with a trend using two smoothing parameters, alpha and beta which correspond to the level and trend components, respectively. Holt's method parameteres (alpha and beta) are beeing selected using grid search.
 
@@ -145,12 +147,8 @@ param <- Optimal_param(song2,show=FALSE)
 #Holt's linear trend method
 Alpha <- as.numeric(param[[1]][1])
 Beta<- as.numeric(param[[2]][1])
-fit <- holt(train, alpha = Alpha, beta = Beta, h =1,initial = 'optimal')
-# Naive forecast for seasonality
+fit <- holt(train, alpha = Alpha, beta = Beta,damped = FALSE, h =1,initial = 'optimal')
 
-# model parameters
-Alpha = fit$model$fit$par[1]
-Beta = fit$model$fit$par[2]
 
 # Residual diagnostics
 e_check <- checkresiduals(fit)
@@ -163,10 +161,44 @@ e_check <- checkresiduals(fit)
 #5. The large positive residual is a result of the unexpected jump.
 #6. The model fails the Ljung-Box test. The model can still be used for forecasting. 
 
-# Check model accuracy: According to our MAPE we have about a 5.33 error rate and test-RMSE = 78250.48
+# Check model accuracy: According to our MAPE we have about a 5.33 error rate and test-RMSE = 78250
 round(accuracy(fit, test),2)
 
 # One-step prediction intervals
+print(paste('80% prediction intervals: ', round(fit$upper[1],3),'-' , round(fit$lower[1],3)))
+
+
+autoplot(fit) +
+  autolayer(fit, series="Holt's method", PI=FALSE) +
+  autolayer(song2, series="Data", PI=FALSE) +
+  ggtitle("Forecasts from Holt's method") + xlab("Weeks") +
+  ylab("Number of streams") +
+  guides(colour=guide_legend(title="Forecast"))
+```
+## It seems that the forcasting method is over-forecasting the trend thus we shall try to dampe the trend.
+```{r}
+#Holt's linear damped trend method
+Alpha <- as.numeric(param[[1]][1])
+Beta<- as.numeric(param[[2]][1])
+fit <- holt(train, alpha = Alpha, beta = Beta,damped = TRUE, h =1,initial = 'optimal')
+
+
+# Residual diagnostics
+e_check <- checkresiduals(fit)
+
+#The model passes residuals check:
+#1. The residuals are uncorrelated(There are a few significant spikes in the ACF)
+#2. The residuals have zero mean.
+#3. The variation of the residuals stays much the same across the historical data, apart from the one outlier.
+#4. Residuals may not be normal - the right tail seems a little too long.
+#5. The large positive residual is a result of the unexpected jump.
+#6. The model fails the Ljung-Box test. The model can still be used for forecasting. 
+
+# Check model accuracy: According to our MAPE we have about a 1.66 error rate and test-RMSE = 24409
+round(accuracy(fit, test),2)
+
+# One-step prediction intervals
+print(paste('80% prediction intervals: ', round(fit$upper[1],3),'-' , round(fit$lower[1],3)))
 
 
 autoplot(fit) +
@@ -178,10 +210,43 @@ autoplot(fit) +
 ```
 
 
+## By letting ETS automaticly selecting the model, we get ETS(M,A,N), Holt's linear method with multiplicative errors.
 ```{r, warning = FALSE, message = FALSE}
-fit$model
+fit2 <- ets(train, model='ZZZ')
+fit2
 
 
+
+# Residual diagnostics
+e_check <- checkresiduals(fit)
+
+#The model passes residuals check:
+#1. The residuals are uncorrelated(There are a few significant spikes in the ACF)
+#2. The residuals have zero mean.
+#3. The variation of the residuals stays much the same across the historical data, apart from the one outlier.
+#4. Residuals may not be normal - the right tail seems a little too long.
+#5. The large positive residual is a result of the unexpected jump.
+#6. The model fails the Ljung-Box test. The model can still be used for forecasting. 
+
+# one-step ahead forecast
+pred <- forecast(fit2, h=1)
+
+
+# Check model accuracy: According to our MAPE we have about a 15.19 error rate and test-RMSE = 222939
+round(accuracy(pred, test),2)
+
+# One-step prediction intervals
+print(paste('80% prediction intervals: ', round(pred$upper[1],3),'-' , round(pred$lower[1],3)))
+
+autoplot(pred) +
+  autolayer(pred, series="ETS(M,A,N)", PI=FALSE) +
+  autolayer(song2, series="Data", PI=FALSE) +
+  ggtitle("Forecasts from ETS(M,A,N)") + xlab("Weeks") +
+  ylab("Number of streams") +
+  guides(colour=guide_legend(title="Forecast"))
 ```
+### From the above our first method of forecast is Holt method with damped trend and Alpha = 0.511, Beta = 0.0981
 
 
+
+# Method 2 : ARIMA
