--- a/First_analysis.Rmd
+++ b/First_analysis.Rmd
@@ -16,8 +16,8 @@ library(cowplot)
 library(forecast)
 
 SpotifyData <- read_excel("Data/SpotifyData_full.xlsx")
+top100 <- read_excel('Data/top100.xlsx')
 ```
-
 
 ```{r, warning = FALSE, message = FALSE}
 # Extracting specific song streams and return it as ts object
@@ -31,32 +31,41 @@ FindSong <- function(SongName, ArtistName){
 ```
 
 
+# Analysis of very short time-series (< 10)
+
+```{r}
+vShort_songs <- top100 %>% filter(counts <= 10)
+dim(vShort_songs)
+head(vShort_songs)
+```
+
+# Analysis of short time-series (> 10 but < 54)
+```{r}
+Short_songs <- top100 %>% filter(counts > 10 & counts <= 54)
+head(Short_songs)
+```
 # SOng2
 ## Preliminary (exploratory) analysis.
 ```{r, warning = FALSE, message = FALSE}
-song2 <- FindSong('Seni Dert Etmeler', 'Madrigal')
+song2 <- FindSong("Bil Diye Söylüyorum", "Sibel Can")
 
-song2_plt1 <- autoplot(song2) +
-  ggtitle('Song: Seni Dert Etmeler') +
-  xlab("Weeks") +
-  ylab("# Streams")
 
 # Imputation by Interpolation method is used to fill missing values. This method is appropriate for time series with strong trend. [ref1]
 
-ggplot_na_imputations(song2, na_interpolation(song2))
+#ggplot_na_imputations(song2, na_interpolation(song2))
 
-song2 <- na_interpolation(song2)
+#song2 <- na_interpolation(song2)
 song2
 ```
 
 ```{r}
-# From the ACF plot we conclude that the data is non stationary having a strong trend and cyclical components and no seasonality
+# From the ACF plot, we conclude that the data is nonstationary having a strong trend and cyclical components and no seasonality.
 ggAcf(song2)
 ```
 
 ```{r}
-# The time series we are dealing with that have been collected at regular intervals (weekly) that are less than the one year (42 weeks), therefore normal decomposition method will not be useful. 
-#It is possible to use a linear regression model to decompose a time series into trend and seasonal components, and then some smoothness assumptions on the seasonal component allow a decomposition with fewer than two full years of data. 
+# The time series we are dealing with have been collected at regular intervals (weekly) for less than one year (42 weeks), therefore the normal decomposition method will not be useful. 
+#It is possible to use a linear regression model to decompose a time series into the trend and seasonal components, and then some smoothness assumptions on the seasonal component allow a decomposition with fewer than two full years of data. 
 
 # Approximating the seasonal pattern using Fourier terms with a few parameters.
 decompose_song2 <- tslm(song2 ~ trend + fourier(song2, 1))
@@ -80,26 +89,19 @@ autoplot(components,facet=TRUE)
 
 ```
 
-```{r}
-# Remove the seasonality component from the data (Seasonly adjusted) as the purpose of our forecast is next week only and not interested in the seasonlay component.
 
-adjust_song2 <- song2 - seasonality
-autoplot(song2, series="Data") +
-  autolayer(adjust_song2, series="Seasonally adjusted")
-```
-
-# Data partitioning: leaving the last observation as test data, as we are only interested in forcasting only the next data point (short-term forcasting)
+## Data partitioning: leaving the last observation as test data, as we are only interested in forcasting only the next data point (short-term forcasting)
 ```{r}
 
 train <- subset(song2, end = length(song2)-1)
 
 test <- subset(song2, start= length(song2))
-test
+
 ```
 
 # Method 1 : Holt's linear trend method
 
-## Starting with Holt's linear trend method, as we anticpate a clear trend in the data this method is a good point to start with, setting to start the initial solution by taking the average values of the first few observations. Holt's Method makes predictions for data with a trend using two smoothing parameters, alpha and beta which correspond to the level and trend components, respectively. Holt's method parameteres (alpha and beta) are beeing selected using grid search.
+## Starting with Holt's linear trend method, as we anticipate a clear trend in the data this method is a good point to start with, setting to start the initial solution by taking the average values of the first few observations. Holt's Method makes predictions for data with a trend using two smoothing parameters, alpha, and beta which correspond to the level and trend components, respectively. Holt's method parameters (alpha and beta) are being selected using grid search.
 
 ### manually identify the optimal model parameters using grid search, using only train data
 ```{r}
@@ -108,7 +110,6 @@ Optimal_param <- function(data, show=FALSE){
   validate <- subset(data, start= length(data))
     # loop through a series of betas and alphas
   param <- seq(.0001, 1, by = .001)
-  beta <- seq(.0001, 1, by = .001)
   RMSE_beta <- NA
   RMSE_alpha <- NA
 
@@ -147,7 +148,7 @@ param <- Optimal_param(song2,show=FALSE)
 #Holt's linear trend method
 Alpha <- as.numeric(param[[1]][1])
 Beta<- as.numeric(param[[2]][1])
-fit <- holt(train, alpha = Alpha, beta = Beta,damped = FALSE, h =1,initial = 'optimal')
+fit <- holt(train, alpha=Alpha ,damped = FALSE, h =1,initial = 'optimal')
 
 
 # Residual diagnostics
@@ -169,8 +170,8 @@ print(paste('80% prediction intervals: ', round(fit$upper[1],3),'-' , round(fit$
 
 
 autoplot(fit) +
-  autolayer(fitted(fit), series="Holt's method", PI=FALSE) +
-  autolayer(song2, series="Data", PI=FALSE) +
+  autolayer(fitted(fit), series="Holt's method") +
+  autolayer(song2, series="Data") +
   ggtitle("Forecasts from Holt's method") + xlab("Weeks") +
   ylab("Number of streams") +
   guides(colour=guide_legend(title="Forecast"))
@@ -180,7 +181,7 @@ autoplot(fit) +
 #Holt's linear damped trend method
 Alpha <- as.numeric(param[[1]][1])
 Beta<- as.numeric(param[[2]][1])
-fit <- holt(train, alpha = Alpha, beta = Beta,damped = TRUE, h =1,initial = 'optimal')
+fit <- holt(train,alpha = Alpha,damped = TRUE,  h =1,initial = 'optimal')
 
 
 # Residual diagnostics
@@ -233,7 +234,7 @@ pred <- forecast(fit2, h=1)
 
 
 # Check model accuracy: According to our MAPE we have about a 15.19 error rate and test-RMSE = 222939
-round(accuracy(pred, test),2)
+round(accuracy(forecast(fit2, h=1), test),2)
 
 # One-step prediction intervals
 print(paste('80% prediction intervals: ', round(pred$upper[1],3),'-' , round(pred$lower[1],3)))
@@ -254,7 +255,7 @@ autoplot(pred) +
 ```{r}
 
 # Use auto.arima to select a model.
-(fit3 <- auto.arima(train, seasonal = FALSE, approximation = FALSE, stepwise = FALSE))
+(fit3 <- auto.arima(train,seasonal = FALSE, approximation = FALSE, stepwise = FALSE))
 
 # Residual diagnostics
 e_check <- checkresiduals(fit3)
@@ -286,11 +287,11 @@ autoplot(pred) +
 
 # Method 3: Exponential regression using trend as predictor
 ```{r}
-fit.exp <- tslm(train ~ trend, lambda = 0)
-
+fit.exp <- tslm(train ~ trend, lambda = 0,h=1)
+fit.exp$method
 
 # Residual diagnostics
-checkresiduals(fit.exp)
+# checkresiduals(fit.exp)
 #The model passes residuals check:
 #1. The residuals are uncorrelated(There are a few significant spikes in the ACF)
 #2. The residuals have almost zero mean.
@@ -326,14 +327,14 @@ FindRank<- function(SongName, Artist){
   song_Rank <- as.data.frame(SpotifyData %>% filter(song == SongName & Artist == Artist) %>% select(Date,Rank))}
 
 #Converting to time-series and impute missing values
-song2_Rank <- na_interpolation(ts_ts(FindRank('Seni Dert Etmeler', 'Madrigal')))
+song2_Rank <- na_interpolation(ts_ts(FindRank("Bil Diye Söylüyorum", "Sibel Can")))
 
 # Frcasting the Rank 
-train_prd <- subset(song2_Rank, end = length(song2_Rank)-1)
+train_pred <- subset(song2_Rank, end = length(song2_Rank)-1)
 
 test_pred <- subset(song2_Rank, start= length(song2_Rank))
 
-autoplot(song2_Rank)
+test_pred
 ```
 
 # We can clearly see that there is a non-linear relationship between the rank and the number of streams
@@ -347,5 +348,41 @@ song2_reg %>%
     geom_point() +
     geom_smooth(method="", se=FALSE)
 ```
+
+```{r}
+#Dynamic Regression method
+fit.xreg <- auto.arima(train, xreg = train_pred)
+
+
+# Residual diagnostics
+e_check <- checkresiduals(fit.xreg)
+
+#The model passes residuals check:
+#1. The residuals are uncorrelated(There are a few significant spikes in the ACF)
+#2. The residuals have zero mean.
+#3. The variation of the residuals stays much the same across the historical data, apart from the one outlier.
+#4. Residuals may not be normal - the right tail seems a little too long.
+#5. The large positive residual is a result of the unexpected jump.
+#6. The model fails the Ljung-Box test. The model can still be used for forecasting. 
+
+
+# one-step ahead forecast
+fcasts.xreg <- forecast(fit.xreg,xreg = f_rank_train, h = 1)
+
+# Check model accuracy: According to our MAPE we have about a 5.33 error rate and test-RMSE = 78250
+round(accuracy(fcasts.xreg, test),2)
+# One-step prediction intervals
+print(paste('80% prediction intervals: ', round(fcasts.xreg$upper[1],3),'-' , round(fcasts.xreg$lower[1],3)))
+
+
+autoplot(fcasts.xreg) +
+  autolayer(fitted(fit.xreg), series="xreg", PI=FALSE) +
+  autolayer(song2, series="Data", PI=FALSE) +
+  ggtitle("Forecasts from xreg") + xlab("Weeks") +
+  ylab("Number of streams") +
+  guides(colour=guide_legend(title="Forecast"))
+```
+
+
 
 
